<resources>
    <string name="app_name">Controle Área Lazer</string>
    <string name="entrar">Entrar</string>
    <string name="text_dadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="cadastar">Cadastrar</string>
    <string name="desenvolvido">Desenvolvido</string>
    <string name="emanoel">Emanoel Georgio de Oliveira</string>
    <string name="vinicius">Vinícius Valério de Sá</string>
    <string name="por">por</string>
    <string name="senha">senha</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="deslogar">Deslogar</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="icone_user">Icone User</string>
    <string name="icone_email">Icone Email</string>
    <string name="photo">Foto</string>
    <string name="qrcode">QrCode</string>
    <string name="credencial">Credencial</string>
    <string name="sair">Sair</string>
    <string name="usuario">Dados Cadastrais</string>
</resources>
