<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TelaPrincipal">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/iconeEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iconeUser" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagefoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_user"
            app:civ_border_width="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ica_photo_camera"

            app:layout_constraintBottom_toBottomOf="@id/imagefoto"
            app:layout_constraintEnd_toEndOf="@id/imagefoto" />

        <ImageView
            android:id="@+id/delete_foto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="@id/ic_camera"
            app:layout_constraintStart_toEndOf="@id/ic_camera" />

        <ImageView
            android:id="@+id/iconeUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/icone_user"
            android:src="@drawable/ic_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imagefoto" />

        <EditText
            android:id="@+id/textNomeUsuario"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iconeUser"
            app:layout_constraintStart_toEndOf="@id/iconeUser"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/iconeEmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/icone_email"
            android:src="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconeUser" />

        <TextView
            android:id="@+id/textEmailUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iconeEmail"
            app:layout_constraintStart_toEndOf="@id/iconeEmail" />


        <Button
            android:id="@+id/bt_editar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/editar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEmailUsuario" />

        <Button
            android:id="@+id/bt_excluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/red"
            android:text="@string/excluir"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_editar" />
        <ImageView
            android:id="@+id/usuario_image_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/user"
            app:layout_constraintEnd_toStartOf="@id/credencial_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_excluir" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            app:layout_constraintEnd_toEndOf="@id/usuario_image_view"
            app:layout_constraintStart_toStartOf="@id/usuario_image_view"
            app:layout_constraintTop_toBottomOf="@id/usuario_image_view" />

        <ImageView
            android:id="@+id/credencial_image_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/credential"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_excluir" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credencial"
            app:layout_constraintEnd_toEndOf="@id/credencial_image_view"
            app:layout_constraintStart_toStartOf="@id/credencial_image_view"
            app:layout_constraintTop_toBottomOf="@id/credencial_image_view" />

        <ImageView
            android:id="@+id/sair_image_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/noun_exit_1016635"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/credencial_image_view"
            app:layout_constraintTop_toBottomOf="@id/bt_excluir" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            app:layout_constraintEnd_toEndOf="@id/sair_image_view"
            app:layout_constraintStart_toStartOf="@id/sair_image_view"
            app:layout_constraintTop_toBottomOf="@id/sair_image_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>